--- a/src/App.css
+++ b/src/App.css
@@ -135,6 +135,24 @@ body, .app {
   font-style: italic;
 }
 
+.book-info {
+  position: absolute;
+  left: -12px;
+  bottom: -10px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: #60ac5d;
+  background-image: url('./icons/info.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 40px;
+  -webkit-box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+
+
+
 .book-top {
   position: relative;
   height: 200px;
@@ -148,7 +166,11 @@ body, .app {
   bottom: -10px;
   width: 40px;
   height: 40px;
+  border-color: black;
   border-radius: 50%;
+  border-style: solid;
+  border-width: 1px;
+  border-color: black;
   background: #60ac5d;
   background-image: url('./icons/arrow-drop-down.svg');
   background-repeat: no-repeat;
