--- a/src/App.css
+++ b/src/App.css
@@ -151,8 +151,6 @@ body, .app {
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
-
-
 .book-top {
   position: relative;
   height: 200px;
@@ -195,4 +193,20 @@ body, .app {
   padding: 20px 10px 0;
   text-align: center;
   font-size: 0.8em;
+}
+
+.modal {
+  border-color: #575757;
+  border-width: 5px;
+  margin: 0 auto;
+  align-content: space-around; 
+  width: 100%;
+  height: 90%;
+  max-width: 90%;
+  position: fixed;
+  left: 0;
+  right: 0;
+  background: white;
+  padding: 15px;
+  z-index: 10;
 }
